// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document-public-access should delete public access for a valid document 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified entry was not found.",
    "operationStatus": "EntryNotFound",
    "status": 404,
    "title": "Entry not found",
    "type": "Error",
  },
}
`;

exports[`delete-document-public-access should delete public access for a valid document 2`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified entry was not found.",
    "operationStatus": "EntryNotFound",
    "status": 404,
    "title": "Entry not found",
    "type": "Error",
  },
}
`;

exports[`delete-document-public-access should handle non-existent document 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "operationStatus": "ContentNotFound",
    "status": 404,
    "title": "The document could not be found",
    "type": "Error",
  },
}
`;
